@@ -666,13 +666,6 @@ champ_tabule_temps champ_don_base champ_tabule_temps 0 Field that is constant in
   attr bloc bloc_lecture bloc 0 Values as a table. The value of the field at any time is calculated by linear interpolation from this table.
 champ_fonc_t champ_don_base champ_fonc_t 0 Field that is constant in space and is a function of time.
   attr val listchaine val 0 Values of field components (time dependant functions).
-champ_fonc_fonction champ_fonc_tabule champ_fonc_fonction 0 Field that is a function of another field.
-  attr dim suppress_param dim 1 del
-  attr bloc suppress_param bloc 1 del
-  attr inco suppress_param inco 1 del
-  attr problem_name ref_Pb_base problem_name 0 Name of problem.
-  attr inco chaine inco 0 Name of the field (for example: temperature).
-  attr expression listchaine expression 0 Number of field components followed by the analytical expression for each field component.
 frontiere_ouverte_gradient_pression_impose_vefprep1b frontiere_ouverte_gradient_pression_impose frontiere_ouverte_gradient_pression_impose_vefprep1b -1 Keyword for an outlet boundary condition in VEF P1B/P1NC on the gradient of the pressure.
 bloc_lec_champ_init_canal_sinal objet_lecture nul 1 Parameters for the class champ_init_canal_sinal. NL2 in 2D: NL2 U=ucent*y(2h-y)/h/h NL2 V=ampli_bruit*rand+ampli_sin*sin(omega*x) NL2 rand: unpredictable value between -1 and 1. NL2 in 3D: NL2 U=ucent*y(2h-y)/h/h NL2 V=ampli_bruit*rand1+ampli_sin*sin(omega*x) NL2 W=ampli_bruit*rand2 NL2 rand1 and rand2: unpredictables values between -1 and 1.
   attr ucent floattant ucent 0 Velocity value at the center of the channel.
