@@ -17,6 +17,13 @@
 #include <EChaine.h>
 
 Implemente_instanciable(Champ_Fonc_Fonction,"Champ_Fonc_Fonction",Champ_Fonc_Tabule);
+// XD champ_fonc_fonction champ_fonc_tabule champ_fonc_fonction 0 Field that is a function of another field.
+// XD  attr dim suppress_param dim 1 del
+// XD  attr pb_field suppress_param pb_field 1 del
+// XD  attr bloc suppress_param bloc 1 del
+// XD  attr problem_name ref_Pb_base problem_name 0 Name of problem.
+// XD  attr inco chaine inco 0 Name of the field (for example: temperature).
+// XD  attr expression listchaine expression 0 Number of field components followed by the analytical expression for each field component.
 
 Sortie& Champ_Fonc_Fonction::printOn(Sortie& os) const { return os; }
 
